Core package changed, Insert fully working now

--- a/clinic-client/src/main/resource/configuration.properties
+++ b/clinic-client/src/main/resource/configuration.properties
@@ -1,2 +1,3 @@
 defaultCssPath=/css/home_clinic.css
 serverAddress=http://localhost:8084/clinic-server/
+#serverAddress=http://localhost:8080/clinic-server/
